--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
           </p>
           <a class="built" href="https://teonite.com">
             <img
-              src="/assets/images/gif/built.gif"
+              src="/assets/images/webp/built.webp"
               alt="built by"
               id="built-by"
             />
@@ -141,7 +141,7 @@
           <div class="left">
             <p>
               Every organization starts with users and this is the core defguard
-              functionalitya core functionality of defguard based on a
+              functionality core functionality of defguard based on a
               PostgreSQL database (community). Then we provide the following
               integrations:
             </p>
