--- a/src/index.html
+++ b/src/index.html
@@ -141,9 +141,8 @@
           <div class="left">
             <p>
               Every organization starts with users and this is the core defguard
-              functionality core functionality of defguard based on a
-              PostgreSQL database (community). Then we provide the following
-              integrations:
+              functionality core functionality of defguard based on a PostgreSQL
+              database (community). Then we provide the following integrations:
             </p>
             <ul>
               <li>
@@ -178,8 +177,9 @@
             <p>MFA is currently supported with the following methods:</p>
             <ul>
               <li>
-                Time-based <strong>One-time Password</strong> Algorithm (TOTP -
-                eg. Google Authenticator)
+                Time-based
+                <strong>One-time Password</strong> Algorithm (TOTP - eg. Google
+                Authenticator)
               </li>
               <li>
                 <strong>WebAuthn/FIDO2</strong> - for hardware key
@@ -242,9 +242,10 @@
         <div class="content">
           <div class="left">
             <p>
-              An easy way to provision <strong>YubiKey</strong> hardware keys in
-              an organization, generating signing keys - gpg/pgp and
-              authentication keys - eg. ssh.
+              An easy way to provision
+              <strong>YubiKey</strong> hardware keys in an organization,
+              generating signing keys - gpg/pgp and authentication keys - eg.
+              ssh.
             </p>
           </div>
           <img
@@ -357,7 +358,9 @@
               </li>
             </ul>
           </div>
-          <img src="" alt="" class="right" />
+          <div class="placeholder right">
+            <p><strong>PLACEHOLDER</strong></p>
+          </div>
         </div>
       </section>
       <section id="enterprise" class="feature white">
@@ -383,7 +386,7 @@
       </section>
     </main>
     <footer>
-      <img src="/assets/images/svg/logo_white.svg" alt="logo" />
+      <img class="logo" src="/assets/images/svg/logo_white.svg" alt="logo" />
       <div class="links">
         <div class="col">
           <p>Company</p>
@@ -406,8 +409,17 @@
         </div>
       </div>
       <p class="copyright">© 2022 teonite services sp. z .o .o</p>
-      <img class="bg" src="/assets/images/webp/source-bg-1.webp" alt="bg1" />
-      <img class="bg" src="/assets/images/webp/source-bg-2.webp" alt="bg2" />
+      <div class="bg blue"></div>
+      <img
+        class="bg wave"
+        src="/assets/images/webp/source-bg-1.webp"
+        alt="bg1"
+      />
+      <img
+        class="bg dots"
+        src="/assets/images/webp/source-bg-2.webp"
+        alt="bg2"
+      />
     </footer>
   </body>
 </html>
