--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         <li class="link">
           <a href="">Try Enterprise</a>
         </li>
-        <li>
+        <li class="github-link">
           <a href="">
             <button class="github">
               <span>Get it from GitHub</span>
@@ -56,6 +56,11 @@
               />
             </button>
           </a>
+        </li>
+        <li id="hamburger">
+          <button>
+            <img src="/assets/images/svg/hamburger.svg" alt="hamburger" />
+          </button>
         </li>
       </ul>
     </nav>
@@ -120,17 +125,27 @@
             <img src="/assets/images/svg/github_white.svg" alt="github icon" />
           </button>
           <video></video>
-          <img
-            class="bg"
-            src="/assets/images/webp/source-bg-1.webp"
-            alt="bg1"
-          />
-          <img
-            class="bg"
-            src="/assets/images/webp/source-bg-2.webp"
-            alt="bg2"
-          />
         </div>
+        <img
+          class="bg wave desktop"
+          src="/assets/images/webp/source-bg-1.webp"
+          alt="wave"
+        />
+        <img
+          class="bg wave mobile"
+          src="/assets/images/png/source-bg-1.png"
+          alt="wave"
+        />
+        <img
+          class="bg dots desktop"
+          src="/assets/images/webp/source-bg-2.webp"
+          alt="dots"
+        />
+        <img
+          class="bg dots mobile"
+          src="/assets/images/png/source-bg-2.png"
+          alt="dots"
+        />
       </section>
       <section id="identity" class="feature light">
         <header>
@@ -411,14 +426,19 @@
       <p class="copyright">© 2022 teonite services sp. z .o .o</p>
       <div class="bg blue"></div>
       <img
-        class="bg wave"
+        class="bg wave desktop"
         src="/assets/images/webp/source-bg-1.webp"
         alt="bg1"
       />
       <img
-        class="bg dots"
+        class="bg dots desktop"
         src="/assets/images/webp/source-bg-2.webp"
         alt="bg2"
+      />
+      <img
+        class="bg wave mobile"
+        src="/assets/images/png/source-bg-1.png"
+        alt="wave"
       />
     </footer>
   </body>
