--- a/src/index.html
+++ b/src/index.html
@@ -127,24 +127,14 @@
           <video></video>
         </div>
         <img
-          class="bg wave desktop"
-          src="/assets/images/webp/source-bg-1.webp"
+          class="bg circuits"
+          src="/assets/images/svg/bg_circuits.svg"
+          alt="circuits"
+        />
+        <img
+          class="bg lines"
+          src="/assets/images/svg/bg_lines.svg"
           alt="wave"
-        />
-        <img
-          class="bg wave mobile"
-          src="/assets/images/png/source-bg-1.png"
-          alt="wave"
-        />
-        <img
-          class="bg dots desktop"
-          src="/assets/images/webp/source-bg-2.webp"
-          alt="dots"
-        />
-        <img
-          class="bg dots mobile"
-          src="/assets/images/png/source-bg-2.png"
-          alt="dots"
         />
       </section>
       <section id="identity" class="feature light">
@@ -210,7 +200,11 @@
             <p><strong>PLACEHOLDER</strong></p>
           </div>
         </div>
-        <img src="/assets/images/webp/source-bg-2.webp" alt="" class="bg" />
+        <img
+          class="bg"
+          src="/assets/images/svg/bg_circuits_l.svg"
+          alt="circuits"
+        />
       </section>
       <section id="vpn" class="feature light">
         <header>
@@ -269,7 +263,11 @@
             class="right"
           />
         </div>
-        <img src="/assets/images/webp/source-bg-2.webp" alt="" class="bg" />
+        <img
+          class="bg"
+          src="/assets/images/svg/bg_circuits_l.svg"
+          alt="circuits"
+        />
       </section>
       <section id="integrations" class="feature light">
         <header>
@@ -349,7 +347,11 @@
             <p><strong>PLACEHOLDER</strong></p>
           </div>
         </div>
-        <img src="/assets/images/webp/source-bg-2.webp" alt="" class="bg" />
+        <img
+          class="bg"
+          src="/assets/images/svg/bg_circuits_l.svg"
+          alt="circuits"
+        />
       </section>
       <section id="open-source" class="feature light">
         <header>
@@ -397,7 +399,11 @@
             <p><strong>PLACEHOLDER</strong></p>
           </div>
         </div>
-        <img src="/assets/images/webp/source-bg-2.webp" alt="" class="bg" />
+        <img
+          class="bg"
+          src="/assets/images/svg/bg_circuits_l.svg"
+          alt="circuits"
+        />
       </section>
     </main>
     <footer>
@@ -426,20 +432,11 @@
       <p class="copyright">© 2022 teonite services sp. z .o .o</p>
       <div class="bg blue"></div>
       <img
-        class="bg wave desktop"
-        src="/assets/images/webp/source-bg-1.webp"
-        alt="bg1"
+        class="bg circuits"
+        src="/assets/images/svg/bg_circuits.svg"
+        alt="circuits"
       />
-      <img
-        class="bg dots desktop"
-        src="/assets/images/webp/source-bg-2.webp"
-        alt="bg2"
-      />
-      <img
-        class="bg wave mobile"
-        src="/assets/images/png/source-bg-1.png"
-        alt="wave"
-      />
+      <img class="bg lines" src="assets/images/svg/bg_lines.svg" alt="lines" />
     </footer>
   </body>
 </html>
