--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,28 @@
         </li>
       </ul>
     </nav>
+    <ul id="floating-socials">
+      <li>
+        <a href="">
+          <img src="/assets/images/svg/github_black.svg" alt="github icon" />
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="/assets/images/svg/twitter_black.svg" alt="twitter icon" />
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="/assets/images/svg/slack_black.svg" alt="slack icon" />
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="/assets/images/svg/reddit_black.svg" alt="reddit icon" />
+        </a>
+      </li>
+    </ul>
     <main>
       <section id="source">
         <div class="content">
@@ -72,40 +94,6 @@
               Build <span class="blue">Your Own</span> secure 
               <span class="break"> & decentralized Organization </span>
             </h1>
-            <ul id="floating-socials">
-              <li>
-                <a href="">
-                  <img
-                    src="/assets/images/svg/github_black.svg"
-                    alt="github icon"
-                  />
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="/assets/images/svg/twitter_black.svg"
-                    alt="twitter icon"
-                  />
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="/assets/images/svg/slack_black.svg"
-                    alt="slack icon"
-                  />
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img
-                    src="/assets/images/svg/reddit_black.svg"
-                    alt="reddit icon"
-                  />
-                </a>
-              </li>
-            </ul>
           </div>
           <p>
             <strong>defguard</strong> provides a set of modules for building
@@ -438,5 +426,6 @@
       />
       <img class="bg lines" src="assets/images/svg/bg_lines.svg" alt="lines" />
     </footer>
+    <script src="/assets/scripts/socials.js"></script>
   </body>
 </html>
