--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,69 @@
         </a>
       </li>
     </ul>
+    <div id="mobile-nav" class="hidden">
+      <div class="top">
+        <img src="/assets/images/svg/logo_nav.svg" alt="logo" />
+        <button id="mobile-nav-close">
+          <img src="/assets/images/svg/hamburger_close.svg" alt="close" />
+        </button>
+      </div>
+      <div class="bottom">
+        <ul class="links">
+          <li class="link">
+            <a href="">Features</a>
+          </li>
+          <li class="link">
+            <a href="">Documentation</a>
+          </li>
+          <li class="link">
+            <a href="">Try Enterprise</a>
+          </li>
+          <li class="github-link">
+            <a href="">
+              <button class="github">
+                <span>Get it from GitHub</span>
+                <img
+                  src="/assets/images/svg/github_white.svg"
+                  alt="github icon"
+                />
+              </button>
+            </a>
+          </li>
+        </ul>
+        <ul class="socials">
+          <li>
+            <a href="">
+              <img
+                src="/assets/images/svg/github_black.svg"
+                alt="github icon"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="/assets/images/svg/twitter_black.svg"
+                alt="twitter icon"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="/assets/images/svg/slack_black.svg" alt="slack icon" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="/assets/images/svg/reddit_black.svg"
+                alt="reddit icon"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <main>
       <section id="source">
         <div class="content">
@@ -426,6 +489,6 @@
       />
       <img class="bg lines" src="assets/images/svg/bg_lines.svg" alt="lines" />
     </footer>
-    <script src="/assets/scripts/socials.js"></script>
+    <script src="/assets/scripts/landing/dist/main.min.js"></script>
   </body>
 </html>
