fix html enterprise section

--- a/src/index.html
+++ b/src/index.html
@@ -438,13 +438,16 @@
         </header>
         <div class="content">
           <div class="left">
-            <strong>Defguard</strong> is in the alpha development stage - at
-            this point, we grant anyone a full enterprise license for a limited
-            time, but those organizations/users that will be most helpful in
-            testing, bug fixing or just creative feedback will be granted in the
-            future a full and unlimited in time enterprise license. To obtain an
-            enterprise license, please fill out the following
-            <a href="/">form.</a>
+            <p>
+              <strong>Defguard</strong> is in the alpha development stage - at
+              this point, we grant anyone a full enterprise license for a
+              limited time, but those organizations/users that will be most
+              helpful in testing, bug fixing or just creative feedback will be
+              granted in the future a full and unlimited in time enterprise
+              license. To obtain an enterprise license, please fill out the
+              following
+              <a href="/">form.</a>
+            </p>
           </div>
           <div class="placeholder right">
             <p><strong>PLACEHOLDER</strong></p>
