--- a/src/index.html
+++ b/src/index.html
@@ -79,22 +79,22 @@
     </nav>
     <ul id="floating-socials">
       <li>
-        <a href="https://github.com/defguard/defguard/">
+        <a href="https://github.com/defguard/defguard/" target="_blank">
           <img src="/assets/images/svg/github_black.svg" alt="github icon" />
         </a>
       </li>
       <li>
-        <a href="https://twitter.com/defguard_net">
+        <a href="https://twitter.com/defguard_net" target="_blank">
           <img src="/assets/images/svg/twitter_black.svg" alt="twitter icon" />
         </a>
       </li>
       <li>
-        <a href="https://defguard.slack.com/">
+        <a href="https://defguard.slack.com/" target="_blank">
           <img src="/assets/images/svg/slack_black.svg" alt="slack icon" />
         </a>
       </li>
       <li>
-        <a href="https://www.reddit.com/r/defguard">
+        <a href="https://www.reddit.com/r/defguard" target="_blank">
           <img src="/assets/images/svg/reddit_black.svg" alt="reddit icon" />
         </a>
       </li>
